--- a/src/app/reader/reader.component.scss
+++ b/src/app/reader/reader.component.scss
@@ -1,45 +1,16 @@
 body{
     background-color: #0BC9CD;
-    min-height: 95vh;
-    max-height: 95vh;
-    padding-top: 5vh;
+    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
 }
 
-.app_link_holder{
-    height: 0%;
-    top: 0;
-    display: flex;
-    margin-bottom: 0vw;
-    position: relative;
-    z-index: 400;
-    margin-bottom: 0vw;
-
-}
-
-.app_link{
-    text-align: center;
-
-    font-family: 'Hammersmith One', sans-serif;
-    font-size: 4vw;
-    color: white;
-    text-shadow: -.1vw .1vw #676767;
-    text-decoration: none;
-    height: 5vh;
-    
-
-}
-
-.app_link:hover{
-    color: #676767;
-    text-shadow: -.1vw .1vw #ffffff;
-
-}
 
 .slider{
     -webkit-appearance: none;
     appearance: none;
     width: 40vw;
-    height: .6vh;
+    height: .3vh;
     border-radius: 2vw;
     outline: none;
     -webkit-transition: .2s;
@@ -49,8 +20,8 @@ body{
 .slider::-moz-range-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 2vw;
-    height: 1.3vw;
+    width: 3vw;
+    height: 2vh;
     border-radius: 2vw;
     background: #7C77B9;
     cursor: pointer;
@@ -60,17 +31,17 @@ body{
     -webkit-appearance: none;
     appearance: none;
     width: 2vw;
-    height: 1.3vw;
+    height: 2vh;
     background: #7C77B9;
     cursor: pointer;
 }
 
 .word_row{
-    
-    margin-top: 0vw;
+    padding-top: 7vh;
+    margin-top: 0vh;
     font-family: 'Hammersmith One', sans-serif;
     text-align: center;
-    font-size: 9vw;
+    font-size: 8rem;
     margin-bottom: 1vh;
 }
 
@@ -89,7 +60,7 @@ body{
     margin-bottom: 3vh;
     margin-left: 0vw;
 
-    font-size: 5vw;
+    font-size: 4rem;
 
 
 }
@@ -97,24 +68,24 @@ body{
 .wpm{
     display: flex;
     font-family: 'Hammersmith One', sans-serif;
-    text-shadow: -.2vw .2vw #ffffff;
+    text-shadow: -.3vh .3vh #ffffff;
 }
 
 .wpm_num{
     font-family: 'Hammersmith One', sans-serif;
-    text-shadow: -.2vw .2vw #ffffff;
+    text-shadow: -.3vh .3vh #ffffff;
 }
 
 
 
 .slider_row{
     align-self: center;
-    margin-bottom: 2vh;
+    margin-bottom: 4vh;
 }
 
 .cont_row{
     display: flex;
-    margin-bottom: 2vh;
+    margin-bottom: 4vh;
 }
 
 .button{
@@ -123,12 +94,14 @@ body{
     align-self: center;
     text-align: center;
     width: 12vw;
-    height: 8vh;
-    color: white;
-    border: solid .3vw white;
+    height: 4rem;
+    
+    border: solid .3vh white;
 
     cursor: pointer;
 
+    color: white;
+    font-size: 3rem;
     font-family: 'Hammersmith One', sans-serif;
 
     transition: color 300ms, background 300ms, border 300ms;
@@ -136,24 +109,24 @@ body{
 
 .play{
     background: #1D8A99;
-    font-size: 3vw;
+    
 }
 
 
 .pause{
     background: #8FBFE0;
-    font-size: 3vw;
+
 }
 
 
 .stop{
     background: #7C77B9;
-    font-size: 3vw;
+
 }
 
 .info-button{
     background: rgb(131, 162, 255);
-    font-size: 3vw;
+
 }
 
 .button:hover{
@@ -180,6 +153,13 @@ body{
     
 }
 
+.input {
+    border: white;
+    resize: none;
+    width: 55vw;
+    height: 35vh;
+    font-family: 'Hammersmith One', sans-serif;
+}
 
 .wrapper{
     display: flex;
@@ -187,8 +167,8 @@ body{
 }
 
 .info{
-    margin-top: 5vh;
-    margin-bottom: 0;
+    margin-top: 7vh;
+    margin-bottom: -9vh;
     background: #1D8A99;
     width: 80vw;
     text-align: center;
@@ -225,50 +205,18 @@ body{
 .info_text {
     text-align: center;
     width: 50vw;
-    margin-top: 0;
-    font-size: 1.3vw;
+    margin-top: 3vh;
+    font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
     margin-bottom: 0;
 }
 
-.modal_content h2 {
-    font-family: 'Hammersmith One', sans-serif;
-    text-shadow: -.1vw .1vw #676767;
-    font-size: 1.4vw;
-}
-
-.modal_info{
-    font-family: Calibri;
-    display: inline;
-    word-break: break-word;
-
-}
-
-.changelog{
-    margin-top: 0vh;
-    h2{
-        margin-top: 0vh;
-    }
-    line-height: .2vw;
-    pre{
-        font-family: 'Montserrat', sans-serif;
-    }
-}
-
-.changelog h3{
-    font-family: Calibri;
-    font-size: 1.1vw;
-    
-}
-
-
-
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 3vw;
+    font-size: 4rem;
     font-weight: bold;
-    margin-right: .5vw;
+    margin-left: 74vw;
 }
 
 .close:hover,
@@ -278,30 +226,46 @@ body{
     cursor: pointer;
 }
 
-.input {
-    border: white;
-    resize: none;
-    width: 55vw;
-    height: 14vw;
-    font-family: 'Hammersmith One', sans-serif;
-}
+
 
 footer{
-    font-family: 'Hammersmith One', sans-serif;
-    color: white;
-    text-align: center;
-    background: transparent;
-    text-shadow: -.1vw .1vw #676767;
+    margin-top: 10vh;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1024px) {
+
+    .app_link_holder{
+        height: 0%;
+        top: 0;
+        display: flex;
+        margin-bottom: 0vh;
+    
+    }
+    
+    .app_link{
+        text-align: center;
+    
+        font-family: 'Hammersmith One', sans-serif;
+        font-size: 8vw;
+        color: white;
+        text-shadow: -.5vw .5vw #676767;
+        text-decoration: none;
+    
+    }
+    
+    .app_link:hover{
+        color: #676767;
+        text-shadow: -.1vw .1vw #ffffff;
+    
+    }
 
     .word_row{
-        margin-top: 7vh;
+        margin-top: 0vh;
+        padding-top: 8vh;
         font-family: 'Hammersmith One', sans-serif;
         text-align: center;
         font-size: 12vw;
-        margin-bottom: 10vh;
+        margin-bottom: 6vh;
     }
 
     .wpm_row{
@@ -311,19 +275,19 @@ footer{
         margin-bottom: 0vh;
         margin-left: 0vw;
 
-        font-size: 10vw;
+        font-size: 3rem;
     }
 
     .wpm{
         display: flex;
         font-family: 'Hammersmith One', sans-serif;
-        text-shadow: -.4vw .4vw #ffffff;
+        text-shadow: -.3vh .3vh #ffffff;
         margin-bottom: 1vh;
     }
 
     .wpm_num{
         font-family: 'Hammersmith One', sans-serif;
-        text-shadow: -.4vw .4vw #ffffff;
+        text-shadow: -.3vh .3vh #ffffff;
     }
     .slider{
         -webkit-appearance: none;
@@ -366,96 +330,81 @@ footer{
         align-self: center;
         text-align: center;
         width: 18vw;
-        height: 5vh;
+        height: 3rem;
         color: white;
-        border: solid 1vw white;
+        border: solid .3vh white;
 
         padding: 0px;
 
         cursor: pointer;
 
         font-family: 'Hammersmith One', sans-serif;
-        font-size: 5.4vw;
+        font-size: 1.6rem;
 
         transition: color 300ms, background 300ms, border 300ms;
     }
 
     .input {
         margin-top: 0vh;
-        font-size: 4vw;
+        font-size: 1.4rem;
         resize: none;
         width: 65vw;
-        height: 30vh;
+        height: 35vh;
         margin-bottom: 2vh;
     }
 
-    .modal{
-        justify-self: center;
-        line-height: normal;
-        position: fixed;
-        z-index: 1;
-        padding-top: 0vh;
-        padding-left: 0vw;
-        padding-right: 0vw;
-        left: 0;
-        top: 0;
-        width: 80vw;
-        max-width: 100%;
-        overflow: auto;
+    .info{
+        
+        margin-top: 16vh;
+        margin-bottom: 30vh;
     }
 
-    .modalClicked{
-        display: block;
-        line-height: normal;
-        position: fixed;
-        z-index: 1;
-        padding-top: 0vw;
-        padding-left: 0vw;
-        padding-right: 0vw;
-        left: 0;
-        top: 0;
+    .info_header{
+    
+        margin: 0;
+        font-size: 2rem;
+        color: white;
         width: 80vw;
-        max-width: 100%;
-        overflow: auto;
+
+
+        text-shadow: -.4vh .4vh #000000;
+        
+        h2{
+            width: 80vw;
+            
+            text-align: center;
+            text-shadow: -.4vh .4vh #000000;
+            margin: 0;
+        }
     }
     
-    .modal_content {
-        background-color: #fefefe;
-        text-align: left;
-        margin: auto;
-        width: 80vw;
-    
-        padding: 1vw;
-        border: 1px solid #888;
-        width:80%;
+    .info_text {
+        text-align: center;
+        width: 50vw;
+        margin-top: 3vh;
+        font-size: 1rem;
+        font-family: 'Montserrat', sans-serif;
+        
+
     }
-    
-    .modal_content h2 {
-        font-family: 'Hammersmith One', sans-serif;
-        text-shadow: -.1vw .1vw #676767;
-        font-size: 1.4vw;
-    }
-    
-    .modal_info{
-        font-family: Calibri;
-        display: inline;
-        word-break: break-word;
-    
-    }
-    
-    .changelog{
-        line-height: .6vw;
-    }
-    
-    .changelog h3{
-        font-family: Calibri;
-        font-size: 1.1vw;
-    }
-    
+
     .close {
         color: #aaaaaa;
         float: right;
-        font-size: 3vw;
+        font-size: 3rem;
         font-weight: bold;
+        margin-left: 65vw;
+        cursor: pointer;
+    }
+
+    .close:hover,
+    .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+    }   
+
+    footer{
+        margin-top: 16.2vh;
     }
 }
