--- a/src/app/reader/reader.component.scss
+++ b/src/app/reader/reader.component.scss
@@ -168,7 +168,7 @@ body{
 
 .info{
     margin-top: 7vh;
-    margin-bottom: -9vh;
+    margin-bottom: -1.8vh;
     background: #1D8A99;
     width: 80vw;
     text-align: center;
@@ -383,7 +383,7 @@ footer{
         width: 50vw;
         margin-top: 3vh;
         font-size: 1rem;
-        font-family: 'Montserrat', sans-serif;
+        font-family: Montserrat;
         
 
     }
